--- a/megamenu-preact-app/src/styles/megamenu.css
+++ b/megamenu-preact-app/src/styles/megamenu.css
@@ -156,6 +156,27 @@
   min-width: 200px;
 }
 
+/* Featured image column */
+.megamenu-container .submenu .featured-image-column {
+  flex: 0 0 250px;
+  margin-right: 20px;
+}
+
+.megamenu-container .submenu .featured-image {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.megamenu-container .submenu .featured-image img {
+  max-width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+  border-radius: 4px;
+}
+
 /* Menus within columns */
 .megamenu-container .submenu .column .menu {
   list-style: none;
@@ -244,5 +265,16 @@
   
   .megamenu-container .submenu.mobile .column .menu li a {
     padding: 8px 15px;
+  }
+  
+  /* Mobile featured image */
+  .megamenu-container .submenu.mobile .featured-image-column {
+    flex: 0 0 100%;
+    margin-right: 0;
+    margin-bottom: 15px;
+  }
+  
+  .megamenu-container .submenu.mobile .featured-image img {
+    max-height: 200px;
   }
 }
