--- a/megamenu-preact-app/src/styles/megamenu.css
+++ b/megamenu-preact-app/src/styles/megamenu.css
@@ -157,13 +157,14 @@
 .megamenu-container .submenu {
   display: flex;
   flex-wrap: nowrap;
+  justify-content: space-between;
   width: 100%;
   max-width: 100%;
   background-color: #fff;
   position: absolute;
   z-index: 100;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-  padding: 20px 0;
+  padding: 20px 30px;
   border-radius: 0 0 4px 4px;
 }
 
@@ -178,7 +179,8 @@
 /* Featured image column */
 .megamenu-container .submenu .featured-image-column {
   flex: 0 0 250px;
-  padding: 10px 15px 0;
+  padding: 10px 0 0 15px;
+  margin-right: 15px;
   align-self: flex-start;
   display: flex;
   flex-direction: column;
