--- a/megamenu-preact-app/src/styles/megamenu.css
+++ b/megamenu-preact-app/src/styles/megamenu.css
@@ -157,7 +157,7 @@
 .megamenu-container .submenu {
   display: flex;
   flex-wrap: nowrap;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
   max-width: 100%;
   background-color: #fff;
@@ -170,17 +170,23 @@
 
 /* Columns within submenu */
 .megamenu-container .submenu .column {
-  flex: 1 1 auto;
-  min-width: 0;
-  padding: 0 15px;
+  flex: 0 1 auto;
+  min-width: 200px;
+  max-width: 300px;
+  margin-right: 0;
+  padding: 0;
   box-sizing: border-box;
+}
+
+.megamenu-container .submenu .column:last-child {
+  margin-right: 0;
 }
 
 /* Featured image column */
 .megamenu-container .submenu .featured-image-column {
   flex: 0 0 250px;
-  padding: 10px 0 0 15px;
-  margin-right: 15px;
+  padding: 0;
+  margin-right: 0;
   align-self: flex-start;
   display: flex;
   flex-direction: column;
@@ -313,7 +319,7 @@
 /* Ensure featured image column is not affected by layout styles */
 .megamenu-container .submenu .featured-image-column {
   flex: 0 0 250px;
-  margin-right: 20px;
+  margin-right: 0;
 }
 
 .megamenu-container .submenu .featured-image-column .featured-image {
