--- a/megamenu-preact-app/src/styles/megamenu.css
+++ b/megamenu-preact-app/src/styles/megamenu.css
@@ -250,12 +250,18 @@
 
 /* Horizontal menu */
 .megamenu-container .submenu .column .horizontal-menu {
-  display: flex;
   flex: 0 0 50%;
   margin: 0 0 15px 0;
   box-sizing: border-box;
   min-width: 0;
   padding: 0 5px;
+}
+
+/* Menu container within horizontal container */
+.megamenu-container .submenu .column .horizontal-container .menu-container {
+  flex: 0 0 50%;
+  padding: 0 5px;
+  box-sizing: border-box;
 }
 
 /* Menus within columns */
