--- a/megamenu-preact-app/src/styles/megamenu.css
+++ b/megamenu-preact-app/src/styles/megamenu.css
@@ -237,31 +237,29 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin: 0 -5px;
+  margin: 0 -10px;
 }
 
-/* Vertical menu (default) */
-.megamenu-container .submenu .column .vertical-menu {
-  display: block;
+/* Menu container within horizontal container */
+.megamenu-container .submenu .column .horizontal-container .menu-container {
+  flex: 0 1 auto;
+  padding: 0 10px;
+  box-sizing: border-box;
+  margin-bottom: 10px;
+  width: 50%;
+}
+
+/* Menu container within vertical container */
+.megamenu-container .submenu .column .vertical-container .menu-container {
   width: 100%;
-  margin: 0 0 20px 0;
-  box-sizing: border-box;
-}
-
-/* Horizontal menu */
-.megamenu-container .submenu .column .horizontal-menu {
-  display: flex;
-  flex: 0 0 50%;
-  margin: 0 0 15px 0;
-  box-sizing: border-box;
-  min-width: 0;
-  padding: 0 5px;
+  margin-bottom: 20px;
 }
 
 /* Menus within columns */
 .megamenu-container .submenu .column .menus-container .menu {
   list-style: none;
   padding: 0;
+  margin: 0 0 15px 0;
 }
 
 /* Menu items */
