--- a/megamenu-preact-app/src/styles/megamenu.css
+++ b/megamenu-preact-app/src/styles/megamenu.css
@@ -11,13 +11,25 @@
   padding: 0.5rem 0;
   font-size: 0.9rem;
   border-bottom: 1px solid #eaeaea;
-  margin-bottom: 1rem;
   background-color: #8cc63e;
   color: white;
+  margin: 0;
+}
+
+/* Logo Bar Styles */
+.logoBar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+
+  img {
+    height: 60px!important;
+  }
 }
 
 /* Dashboard dropdown styles */
-.dashboard-container {
+.dashboard-menu-container {
   position: relative;
   margin-left:3vw;
 }
