--- a/megamenu-preact-app/src/styles/megamenu.css
+++ b/megamenu-preact-app/src/styles/megamenu.css
@@ -14,21 +14,87 @@
   background-color: #8cc63e;
   color: white;
   margin: 0;
+  padding-left: 1vw;
 
-  img {
-    height: 60px!important;
+  .crest2025 {
+    margin: 0 1em;
+
+    img {
+      height: 60px!important;
+      padding-top: 5px;
+    }
+  }
+
+  .topbar-logobar {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+  }
+  .banner-logo2025 {
+    margin: 0;
+
+  }
+  .logo2025 {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    color: white;
+    font-size: 50px;
+    text-decoration: none;
   }
 }
 
+.topbar-menus-container {
+  display: flex;
+  align-items: center;
+  justify-content: right;
 
+  font-size: 14px;
+}
 
+.search-area2025 {
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  background: white;
+  border-radius: 3vw;
+  margin-right: .5em;
+
+  .icon-search2025 {
+    color: white;
+    font-family: 'life';
+    text-decoration: none;
+  }
+
+  a {
+    text-decoration: none;
+  }
+
+  .icon-search2025::before {
+    content: "\e618";
+    font-size: 13px;
+    margin-left: -2.2em;
+    background: #8cc63e;
+    display: block;
+    height: 1.9em;
+    border-radius: 50%;
+    width: 1.9em;
+    padding: .5em;
+  }
+}
+
+#searchForm2025 input {
+  padding: .5em;
+  border-radius: 3vw;
+  padding-left: 1em;
+  border: unset;
+}
 /* Dashboard dropdown styles */
 .dashboard-menu-container {
   position: relative;
-  margin-left:3vw;
 }
 
-.dashboard-toggle {
+.dashboard-toggle2025 {
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -44,7 +110,7 @@
   background-color: #f5f5f5;
 } */
 
-.dashboard-toggle .dropdown-indicator {
+.dashboard-toggle2025 .dropdown-indicator2025 {
   display: inline-block;
   width: 0;
   height: 0;
@@ -59,10 +125,10 @@
   transform: rotate(180deg);
 } */
 
-.dashboard-dropdown {
+.dashboard-dropdown2025 {
   position: absolute;
   top: 100%;
-  left: 0;
+  right: 0;
   background-color: white;
   border: 1px solid #eaeaea;
   border-radius: 4px;
@@ -72,18 +138,18 @@
   margin-top: 5px;
 }
 
-.dashboard-dropdown ul {
+.dashboard-dropdown2025 ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-.dashboard-dropdown li {
+.dashboard-dropdown2025 li {
   padding: 0;
   margin: 0;
 }
 
-.dashboard-dropdown a {
+.dashboard-dropdown2025 a {
   display: block;
   padding: 0.75rem 1rem;
   color: #333;
@@ -100,7 +166,7 @@
   display: flex;
   border: 1px solid yellow;
   border-radius: 4vw;
-  margin-right: 3vw;
+  line-height: 1;
 }
 
 .small-menu {
@@ -125,9 +191,12 @@
 }
 
 .small-menu li:last-child {
- background-color: yellow;
- color: black;
- border-radius: 4vw;
+  background-color: yellow;
+  color: black;
+  border-radius: 4vw;
+  white-space: nowrap;
+  flex-shrink: 0;
+
 
  a,
  a:hover,
