--- a/megamenu-preact-app/public/megamenu.css
+++ b/megamenu-preact-app/public/megamenu.css
@@ -14,87 +14,21 @@
   background-color: #8cc63e;
   color: white;
   margin: 0;
-  padding-left: 1vw;
 
-  .crest2025 {
-    margin: 0 1em;
-
-    img {
-      height: 60px!important;
-      padding-top: 5px;
-    }
-  }
-
-  .topbar-logobar {
-    display: flex;
-    align-items: center;
-    justify-content: left;
-  }
-  .banner-logo2025 {
-    margin: 0;
-
-  }
-  .logo2025 {
-    display: flex;
-    align-items: center;
-    justify-content: left;
-    color: white;
-    font-size: 50px;
-    text-decoration: none;
+  img {
+    height: 60px!important;
   }
 }
 
-.topbar-menus-container {
-  display: flex;
-  align-items: center;
-  justify-content: right;
 
-  font-size: 14px;
-}
 
-.search-area2025 {
-  display: flex;
-  align-items: center;
-  justify-content: right;
-  background: white;
-  border-radius: 3vw;
-  margin-right: .5em;
-
-  .icon-search2025 {
-    color: white;
-    font-family: 'life';
-    text-decoration: none;
-  }
-
-  a {
-    text-decoration: none;
-  }
-
-  .icon-search2025::before {
-    content: "\e618";
-    font-size: 13px;
-    margin-left: -2.2em;
-    background: #8cc63e;
-    display: block;
-    height: 1.9em;
-    border-radius: 50%;
-    width: 1.9em;
-    padding: .5em;
-  }
-}
-
-#searchForm2025 input {
-  padding-top: .5em;
-  border-radius: 3vw;
-  padding-left: 1em;
-  border: unset;
-}
 /* Dashboard dropdown styles */
 .dashboard-menu-container {
   position: relative;
+  margin-left:3vw;
 }
 
-.dashboard-toggle2025 {
+.dashboard-toggle {
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -110,11 +44,7 @@
   background-color: #f5f5f5;
 } */
 
-.eagle-icon2025 img {
-  height: 40px;
-}
-
-.dashboard-toggle2025 .dropdown-indicator2025 {
+.dashboard-toggle .dropdown-indicator {
   display: inline-block;
   width: 0;
   height: 0;
@@ -129,10 +59,10 @@
   transform: rotate(180deg);
 } */
 
-.dashboard-dropdown2025 {
+.dashboard-dropdown {
   position: absolute;
   top: 100%;
-  right: 0;
+  left: 0;
   background-color: white;
   border: 1px solid #eaeaea;
   border-radius: 4px;
@@ -142,18 +72,18 @@
   margin-top: 5px;
 }
 
-.dashboard-dropdown2025 ul {
+.dashboard-dropdown ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-.dashboard-dropdown2025 li {
+.dashboard-dropdown li {
   padding: 0;
   margin: 0;
 }
 
-.dashboard-dropdown2025 a {
+.dashboard-dropdown a {
   display: block;
   padding: 0.75rem 1rem;
   color: #333;
@@ -170,7 +100,7 @@
   display: flex;
   border: 1px solid yellow;
   border-radius: 4vw;
-  line-height: 1;
+  margin-right: 3vw;
 }
 
 .small-menu {
@@ -183,10 +113,9 @@
 .small-menu li {
   margin: 0;
   padding: 0;
-  padding-top: 0.25em;
 }
 
-.small-menu li a {
+.small-menu a {
   display: block;
   padding: 0.5rem 0.75rem;
   color: white;
@@ -196,12 +125,9 @@
 }
 
 .small-menu li:last-child {
-  background-color: yellow;
-  color: black;
-  border-radius: 4vw;
-  white-space: nowrap;
-  flex-shrink: 0;
-
+ background-color: yellow;
+ color: black;
+ border-radius: 4vw;
 
  a,
  a:hover,
@@ -403,6 +329,7 @@
 .megamenu-container .submenu .featured-image-column {
   flex: 0 0 250px;
   padding: 0;
+  margin-right: 0;
   align-self: flex-start;
   display: flex;
   flex-direction: column;
@@ -422,7 +349,6 @@
   object-fit: cover;
   border-radius: 4px;
   display: block;
-  margin-right: 40px;
 }
 
 /* Submenu wrapper */
@@ -649,3 +575,4 @@
     max-width: 100%;
   }
 }
+
