mobile bar basics

--- a/megamenu-preact-app/src/styles/megamenu.css
+++ b/megamenu-preact-app/src/styles/megamenu.css
@@ -44,6 +44,47 @@
   }
 }
 
+/* Top Bar Mobile Styles */
+.top-bar-mobile {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 0.5rem 0;
+  font-size: 0.9rem;
+  border-bottom: 1px solid #eaeaea;
+  background-color: white;
+  margin: 0;
+  padding-left: 1vw;
+
+  .crest2025 {
+    margin: 0 1em;
+
+    img {
+      height: 60px!important;
+      padding-top: 5px;
+    }
+  }
+
+  .topbar-logobar {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+  }
+  .banner-logo2025 {
+    margin: 0;
+
+  }
+  .logo2025 {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    color: #8cc63e;
+    font-size: 30px;
+    text-decoration: none;
+  }
+}
+
 .topbar-menus-container {
   display: flex;
   align-items: center;
